adding sign in and sign up feature

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#hero">Best doctors</a></li>
           <li><a class="main-nav-link" href="#testmonials">Fedback</a></li>
-          <li><a class="main-nav-link" href="#about">About us</a></li>
-          <li><a class="main-nav-link" href="#services">Footer</a></li>
+          <li><a class="main-nav-link" href="about.html">About us</a></li>
+          <li><a class="main-nav-link" href="signIn.html">sign in</a></li>
         </ul>
       </nav>
-      <a class="main-nav-link nav-cta" href="#cta"
+      <a class="main-nav-link nav-cta" href="signUp.html"
         ><span style="font-size: 24px; transform: translateY(-1.8px)"
           >&#9679;</span
         >
