adding main section and doctors

--- a/index.html
+++ b/index.html
@@ -28,19 +28,160 @@
           <li><a class="main-nav-link" href="about.html">About us</a></li>
           <li><a class="main-nav-link" href="signIn.html">sign in</a></li>
         </ul>
-      </nav>
-      <a class="main-nav-link nav-cta" href="signUp.html"
-        ><span style="font-size: 24px; transform: translateY(-1.8px)"
-          >&#9679;</span
+        <a class="main-nav-link nav-cta" href="signUp.html"
+          ><span style="font-size: 24px; transform: translateY(-1.8px)"
+            >&#9679;</span
+          >
+          Sign Up</a
         >
-        Sign Up</a
-      >
+      </nav>
 
       <button class="btn-mobile-nav">
         <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
         <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
       </button>
     </header>
+
+    <section class="main-section">
+      <div class="content">
+        <h1>Making your health our priority</h1>
+        <p>
+          Our hospital is dedicated to providing top-notch healthcare services
+          to our community. With a team of experienced professionals and
+          state-of-the-art facilities, we ensure the best care for our patients.
+        </p>
+      </div>
+      <div class="image">
+        <img src="src/hospital_image.jpg" alt="Hospital Building" />
+      </div>
+    </section>
+
+    <section class="best-doctors">
+      <h2 class="section-title">Our Leading Specialists</h2>
+      <div class="doctors-grid">
+        <!-- Doctor 1 -->
+        <article class="doctor-card">
+          <div class="card-inner">
+            <div class="doctor-header">
+              <div class="avatar-container">
+                <img
+                  src="https://randomuser.me/api/portraits/men/20.jpg"
+                  alt="Dr. John Smith"
+                  class="doctor-avatar"
+                />
+              </div>
+              <div class="doctor-meta">
+                <h3 class="doctor-name">Dr. Amr Ahmed</h3>
+                <p class="doctor-specialty">Heartology Expert</p>
+              </div>
+            </div>
+            <div class="doctor-details">
+              <div class="stats-grid">
+                <div class="stat-item">
+                  <span class="stat-value">4.7</span>
+                  <span class="stat-label">Rating</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-value">8+</span>
+                  <span class="stat-label">Years</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-value">1k</span>
+                  <span class="stat-label">Patients</span>
+                </div>
+              </div>
+              <div class="expertise">
+                <span class="expertise-tag">Heart Surgery</span>
+                <span class="expertise-tag">Recaptli</span>
+                <span class="expertise-tag">FelectroHeart </span>
+              </div>
+            </div>
+            <button class="cta-button">Schedule Consultation</button>
+          </div>
+        </article>
+        <article class="doctor-card">
+          <div class="card-inner">
+            <div class="doctor-header">
+              <div class="avatar-container">
+                <img
+                  src="https://randomuser.me/api/portraits/men/75.jpg"
+                  alt="Dr. John Smith"
+                  class="doctor-avatar"
+                />
+                <div class="badge">TOP RATED</div>
+              </div>
+              <div class="doctor-meta">
+                <h3 class="doctor-name">Dr. John Smith</h3>
+                <p class="doctor-specialty">Cardiology Expert</p>
+              </div>
+            </div>
+            <div class="doctor-details">
+              <div class="stats-grid">
+                <div class="stat-item">
+                  <span class="stat-value">4.95</span>
+                  <span class="stat-label">Rating</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-value">15+</span>
+                  <span class="stat-label">Years</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-value">2.8k</span>
+                  <span class="stat-label">Patients</span>
+                </div>
+              </div>
+              <div class="expertise">
+                <span class="expertise-tag">Heart Surgery</span>
+                <span class="expertise-tag">Prevention</span>
+                <span class="expertise-tag">Rehabilitation</span>
+              </div>
+            </div>
+            <button class="cta-button">Schedule Consultation</button>
+          </div>
+        </article>
+        <article class="doctor-card">
+          <div class="card-inner">
+            <div class="doctor-header">
+              <div class="avatar-container">
+                <img
+                  src="https://randomuser.me/api/portraits/men/15.jpg"
+                  alt="Dr. John Smith"
+                  class="doctor-avatar"
+                />
+              </div>
+              <div class="doctor-meta">
+                <h3 class="doctor-name">Dr. Omran Smith</h3>
+                <p class="doctor-specialty">Stomac Expert</p>
+              </div>
+            </div>
+            <div class="doctor-details">
+              <div class="stats-grid">
+                <div class="stat-item">
+                  <span class="stat-value">4.55</span>
+                  <span class="stat-label">Rating</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-value">6+</span>
+                  <span class="stat-label">Years</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-value">1.3k</span>
+                  <span class="stat-label">Patients</span>
+                </div>
+              </div>
+              <div class="expertise">
+                <span class="expertise-tag">Surgery</span>
+                <span class="expertise-tag">Stomac habit</span>
+                <span class="expertise-tag">adipisicing elit</span>
+              </div>
+            </div>
+            <button class="cta-button">Schedule Consultation</button>
+          </div>
+        </article>
+
+        <!-- Repeat similar structure for Doctor 2 and 3 -->
+      </div>
+    </section>
 
     <main>
       <section class="section-testimonials" id="testmonials">
