--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,9 @@
     <script type="module" src="components/script.js"></script>
 
     <link rel="stylesheet" href="components/profile.css" />
-    <title>Document</title>
+
+    <link rel="icon" href="src/pulse-outline.svg" />
+    <title>HS Hospital</title>
   </head>
   <body>
     <div id="id"></div>
