--- a/about.html
+++ b/about.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="components/about.css" />
+    <link rel="icon" href="src/pulse-outline.svg" />
+    <title>HS Hospital</title>
+  </head>
+  <body>
+    <header class="header">
+      <h1>About Our Hospital</h1>
+    </header>
+
+    <main class="about-section">
+      <div class="about-content">
+        <h2>Our Mission</h2>
+        <p>
+          We are committed to providing exceptional healthcare services,
+          blending advanced technology with compassionate care for every
+          patient.
+        </p>
+        <h2>Our Vision</h2>
+        <p>
+          To be the leading healthcare provider in our community, continuously
+          innovating and improving patient care.
+        </p>
+        <h2>Our History</h2>
+        <p>
+          Established in [Year], our hospital has a long tradition of excellence
+          in medicine, growing with the community and embracing modern medical
+          practices.
+        </p>
+      </div>
+      <div class="about-image">
+        <img src="src/hospital_image.jpg" alt="Hospital Overview" />
+      </div>
+    </main>
+  </body>
 </html>
