--- a/Frontend/signIn.html
+++ b/Frontend/signIn.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="components/signIn.css" />
   </head>
   <body>
+    <a href="#" class="logo">
+      <ion-icon name="pulse-outline"></ion-icon>
+      <span>HS HOSPITAL</span>
+    </a>
     <div class="signin-container">
       <h2>Sign In</h2>
       <form class="signin-form">
@@ -36,5 +40,14 @@
         Don't have an account? <a href="signUp.html">Sign Up</a>
       </p>
     </div>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule=""
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
