--- a/Frontend/signIn.html
+++ b/Frontend/signIn.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="components/signIn.css" />
   </head>
   <body>
-    <a href="#" class="logo">
+    <a href="index.html" class="logo">
       <ion-icon name="pulse-outline"></ion-icon>
       <span>HS HOSPITAL</span>
     </a>
