--- a/Frontend/signIn.html
+++ b/Frontend/signIn.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="src/pulse-outline.svg" />
     <title>Sign In Page</title>
+    
+
     <link rel="stylesheet" href="components/signIn.css" />
   </head>
   <body>
