--- a/Frontend/signIn.html
+++ b/Frontend/signIn.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="src/pulse-outline.svg" />
     <title>Sign In Page</title>
-    
 
     <link rel="stylesheet" href="components/signIn.css" />
   </head>
@@ -16,7 +15,7 @@
     </a>
     <div class="signin-container">
       <h2>Sign In</h2>
-      <form class="signin-form">
+      <form class="signin-form" id="login-form">
         <div class="input-group">
           <label for="email">Email</label>
           <input
@@ -44,6 +43,7 @@
       </p>
     </div>
 
+    <script src="../Frontend/components/scriptSignin.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
@@ -54,3 +54,24 @@
     ></script>
   </body>
 </html>
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HIS - Sign In</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="login-container">
+      <h2>Hospital Information System</h2>
+      <form id="login-form">
+        <input type="email" id="email" placeholder="Email" required />
+        <input type="password" id="password" placeholder="Password" required />
+        <button type="submit">Sign In</button>
+      </form>
+      <p id="error-message"></p>
+    </div>
+  </body>
+</html> -->
