add doctor DDfinish

--- a/Frontend/signUp.html
+++ b/Frontend/signUp.html
@@ -15,7 +15,7 @@
 
     <div class="signup-container">
       <h2>Sign Up</h2>
-      <form class="signup-form">
+      <form class="signup-form" id="signup-form">
         <div class="input-group input-name">
           <label for="name">Full Name</label>
           <input
@@ -57,11 +57,11 @@
           />
         </div>
         <div class="input-group">
-          <label for="password">Birth date</label>
+          <label for="Birth">Birth date</label>
           <input
             type="date"
-            id="password"
-            name="password"
+            id="Birth"
+            name="Birth"
             placeholder="Enter your password"
             required
           />
@@ -101,6 +101,7 @@
       </p>
     </div>
 
+    <script src="components/signup.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
